[package]
name = "sivasbus"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Sivas live public bus data scraper"
repository = "https://github.com/x-gkm/sivasbus"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
reqwest = { version = "0.12.24", features = ["cookies", "json"] }
scraper = "0.24.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }
